<resources>
    <string name="app_name">red_lighthouse</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="create_id">회원가입</string>
    <string name="findPw">비밀번호찾기</string>
    <string name="checkId">아이디확인</string>
    <string name="inputId">이메일입력</string>
    <string name="backLogin">로그인하러가기</string>
    <string name="title">빨간등대</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>