<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idWindow"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputId"
                android:textSize="30sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_Id"
                android:hint="@string/email"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:maxLength="30"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkIdBtn"
                android:text="@string/checkId"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwWindow"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pw"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/findPw"
                android:hint="@string/pw"
                android:inputType="textPassword|textNoSuggestions"
                android:maxLength="20"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newPwBtn"
                android:text="비밀번호변경"/>
        </LinearLayout>
        <Button
            android:id="@+id/goLogin"
            android:text="@string/backLogin"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>